--- a/main.css
+++ b/main.css
@@ -3,29 +3,164 @@ body {
   padding: 15px;
 }
 
+a:focus, button:focus {
+  outline: 0;
+}
+
+.error {
+  margin: 0;
+  font-weight: bold;
+  color: red
+}
+
 h1 {
-  margin-top: 0;
-  border-bottom: 2px solid #ccc;
+  margin-top: 0px;
   padding-bottom: 15px;
+  color: #333;
+  text-align: center;
+  margin-left: 17px;
+  font-family: 'courier new';
+}
+
+h1 span {
+  font-size: 2em;
+}
+
+.header {
+  height: 90px;
+  border-bottom: 2px #ccc dotted;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
 
 .script_buttons {
   border: none;
-  padding: 15px 12px;
-  display: block;
-  margin: 15px 0px;
+  padding: 8px 14px;
+  margin-right: 5px;
+  margin: 5px 0px;
   font-size: 1.2em;
   color: white;
   border-radius: 6px;
+  cursor: pointer;
 }
 
-.script_buttons:hover {
-  background-color: #4C4EE2;
+.script_buttons:hover, #save_button:hover {
+  background-color: #52b159;
+  transform: scale(1.1);
 }
 
 .script_buttons_red {
-  background-color: #FB0C06;
+  background-color: #7ef49d;
 }
-.script_buttons_orange {
-  background-color: #FD6F08;
+
+label {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+input, textarea {
+  width: 306px;
+  padding: 5px;
+  font-size: 1.2em;
+}
+
+textarea {
+  height: 125px;
+}
+
+#save_button, #update_button {
+  width: 320px;
+  border: none;
+  background-color: green;
+  padding: 8px;
+  margin-top: 15px;
+  color: white;
+  font-size: 1.3em;
+  cursor: pointer;
+}
+
+
+.loeschen {
+  margin-left: 8px;
+  padding: 4px 7px;
+  border-radius: 20px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.edit, .loeschen {
+  animation: shake .5s ease-in-out infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+
+  20% {
+    transform: translateX(-1px);
+  }
+
+  40% {
+    transform: translateX(1px);
+  }
+
+  60% {
+    transform: translateX(-1px);
+  }
+
+  80% {
+    transform: translateX(1px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.edit:hover, .loeschen:hover {
+  animation: none;
+}
+
+.edit {
+  padding: 4px 7px;
+  border-radius: 20px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.footer {
+  margin-top: 40px;
+  border-top: 2px dotted #ccc;
+  padding-top: 8px;
+}
+
+.btn-manage_actions {
+  text-decoration: none;
+  background-color: #51b158;
+  padding: 4px 15px;
+  color: white;
+  border-radius: 5px;
+}
+
+.btn-manage_actions:hover {
+  background-color: #7ef49d;
+}
+
+.btn-info {
+  background-color: #5290E8;
+  color: white;
+  padding: 3px 7px;
+  border-radius: 23px;
+  text-decoration: none;
+  font-weight: bold;
 }
